--- a/RestoApp/Dominio/Dominio.csproj
+++ b/RestoApp/Dominio/Dominio.csproj
@@ -41,7 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Cargo_TipoInsumo.cs" />
+    <Compile Include="Cargo.cs" />
+    <Compile Include="Categorias.cs" />
     <Compile Include="Insumo.cs" />
     <Compile Include="Mesa.cs" />
     <Compile Include="Pedido.cs" />
@@ -49,9 +50,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Stock.cs" />
     <Compile Include="Usuario.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
