--- a/RestoApp/Dominio/Dominio.csproj
+++ b/RestoApp/Dominio/Dominio.csproj
@@ -44,12 +44,17 @@
     <Compile Include="Cargo.cs" />
     <Compile Include="Categorias.cs" />
     <Compile Include="Insumo.cs" />
+    <Compile Include="ItemsPedidos.cs" />
     <Compile Include="Mesa.cs" />
     <Compile Include="Pedido.cs" />
     <Compile Include="Persona.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Stock.cs" />
+    <Compile Include="TipoInsumo.cs" />
     <Compile Include="Usuario.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
