--- a/RestoApp/RestoApp2/RestoApp2.csproj
+++ b/RestoApp/RestoApp2/RestoApp2.csproj
@@ -110,6 +110,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Site.css" />
+    <Content Include="Error.aspx" />
     <Content Include="Gerente-Menu.aspx" />
     <Content Include="Gerente-Personal.aspx" />
     <Content Include="Gerente-Stock.aspx" />
@@ -167,6 +168,13 @@
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Error.aspx.cs">
+      <DependentUpon>Error.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Error.aspx.designer.cs">
+      <DependentUpon>Error.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Gerente-Menu.aspx.cs">
       <DependentUpon>Gerente-Menu.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
