--- a/RestoApp/RestoApp2/Web.config
+++ b/RestoApp/RestoApp2/Web.config
@@ -5,10 +5,11 @@
   -->
 <configuration>
   <system.web>
-    <compilation debug="true" targetFramework="4.7.2" />
+	    
+	  <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
-    <pages>
-      <namespaces>
+    <pages enableSessionState="true">
+	<namespaces>
         <add namespace="System.Web.Optimization" />
       </namespaces>
       <controls>
