--- a/RestoApp/RestoApp2/bin/RestoApp2.dll.config
+++ b/RestoApp/RestoApp2/bin/RestoApp2.dll.config
@@ -8,7 +8,7 @@
 	    
 	  <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
-    <pages enableSessionState="true">
+    <pages enableSessionState="true" enableEventValidation="true">
 	<namespaces>
         <add namespace="System.Web.Optimization" />
       </namespaces>
