--- a/RestoApp/Dominio/Dominio.csproj
+++ b/RestoApp/Dominio/Dominio.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Pedido.cs" />
     <Compile Include="Persona.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Historial.cs" />
     <Compile Include="Usuario.cs" />
   </ItemGroup>
   <ItemGroup>
