Crud de Insumos,Tipos y Categorias, Filtros
Cree un crud de la clase Insumos, Tipo de insumo y categorias, al GetAll de insumo le envio una clase de tipo filtrosInsumos, para mandarle constantemente la filtración de datos, lo apliqué completamente en Menu y MenúGerente

--- a/RestoApp/Negocio/Negocio.csproj
+++ b/RestoApp/Negocio/Negocio.csproj
@@ -43,6 +43,9 @@
   <ItemGroup>
     <Compile Include="AccessData.cs" />
     <Compile Include="Consultas.cs" />
+    <Compile Include="NegocioCategoria.cs" />
+    <Compile Include="NegocioInsumos.cs" />
+    <Compile Include="NegocioTipoInsumo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
