--- a/RestoApp/Dominio/Dominio.csproj
+++ b/RestoApp/Dominio/Dominio.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Cargo.cs" />
     <Compile Include="Categorias.cs" />
+    <Compile Include="Filtros\FiltrosInsumos.cs" />
     <Compile Include="TipoInsumo.cs" />
     <Compile Include="Insumo.cs" />
     <Compile Include="ItemsPedidos.cs" />
@@ -56,5 +57,6 @@
   <ItemGroup>
     <None Include="ClassDiagram1.cd" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
