Filtros Menu-Personas y Menu-Stock
Habilité y dejé funcionales los filtros de Menú Stock, también de Menú Personas, para ese le creé un crud a personas "NegocioPersonas" y un crud para Cargos, para agregar un par de despegables en la vista de MenuPersonas

--- a/RestoApp/Dominio/Dominio.csproj
+++ b/RestoApp/Dominio/Dominio.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Cargo.cs" />
     <Compile Include="Categorias.cs" />
     <Compile Include="Filtros\FiltrosInsumos.cs" />
+    <Compile Include="Filtros\FiltrosPersonas.cs" />
     <Compile Include="TipoInsumo.cs" />
     <Compile Include="Insumo.cs" />
     <Compile Include="ItemsPedidos.cs" />
