--- a/RestoApp/Negocio/Negocio.csproj
+++ b/RestoApp/Negocio/Negocio.csproj
@@ -43,8 +43,10 @@
   <ItemGroup>
     <Compile Include="AccessData.cs" />
     <Compile Include="Consultas.cs" />
+    <Compile Include="NegocioCargo.cs" />
     <Compile Include="NegocioCategoria.cs" />
     <Compile Include="NegocioInsumos.cs" />
+    <Compile Include="NegocioPersona.cs" />
     <Compile Include="NegocioTipoInsumo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
